# core

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  build_backend.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  proposal.yml
.github/workflows/: ci.yml  publish.yml
ace/: __init__.py
ace_mcp_client/: __init__.py  client.py  server.py  tools.py
core/engine/: keyword_classifier.py  solution.py  version.py
core/schema/: __init__.py  v001_structural.surql  v002_intelligence.surql  v003_maturation.surql  v004_documents.surql  v005_synapses.surql  v006_flow_config.surql  v007_scheduler_signals.surql  v008_briefings.surql  v009_execution.surql  v010_skills.surql  v011_reasoning.surql  v012_pm.surql  v013_ideas_playbooks.surql  v014_portal.surql  v015_advanced_intelligence.surql  v016_portal.surql  v017_runner.surql  v018_chat_linked.surql  v019_jobs_templates.surql  v020_measurement.surql  v021_evolution.surql  v022_idea_conversations.surql  v023_orchestration_events.surql  v024_experiment_narratives.surql  v025_dual_graphs.surql  v026_engagement.surql  v027_self_optimizer.surql  v028_onboarding.surql  v029_domain_path_optional.surql  v030_competitive_observer.surql  v031_graph.surql  v032_product_awareness.surql  v033_ecosystem.surql  v034_product_direction_flex.surql  v035_flexible_object_fields.surql  v036_vision_themes.surql  v037_four_layer_live.surql  v038_drop_graph_shadows.surql  v039_embeddings.surql  (+117 more)
core/ui/: canvas_proxy_cases.json
docs/: README.md  architecture.md  build-your-first-extension.md  capability-evolution-roadmap.md  capability-maturity.md  decision-correction-receipts.md  extension-api.md  extension-invocation-contract.md  f1-foresight-evidence.md  faq.md  foresight.md  g1-living-product-graph-evidence.md  governance.md  i2-attributable-deliberation-evidence.md  i3-intelligence-use-evidence.md  ia-r1-product-map.md  l1-foresight-impact-evidence.md  living-product-graph.md  onboarding-trials.md  phase-3-extension-invocation-lifecycle-acceptance.md  phase-4-extension-outcome-acceptance.md  phase-6-extension-product-experience-acceptance.md  phase-7-extension-invocation-stabilization-review.md  product-builder-golden-path.md  providers.md  r1-onboarding-evidence.md  r2-release-evidence.md  r3-provider-validation.md  r5-release-readiness.md  roadmap-status.md
docs/design/: capability-evolution.md
docs/evidence/: README.md  g1-living-product-graph-evidence.md  i3-intelligence-use-evidence.md  ia-r1-product-map.md  l1-foresight-impact-evidence.md  phase-5-extension-sdk-acceptance.md  phase-6-extension-product-experience-acceptance.md  phase-7-extension-invocation-stabilization-review.md  r2-release-evidence.md  r6-release-readiness.md
evaluations/: README.md  __init__.py
evaluations/fixtures/: decision_delta_contract_v1.json  g1_living_product_graph_manifest_v1.json  g1_living_product_graph_v1.json  i2_attributable_deliberation_v1.json  i3_intelligence_use_v1.json  l1_foresight_impact_v1.json  l1_preregistration_v1.json  m5_ic_01_live_protocol_v1.json  offline_contract.json  r4_product_builder_golden_path_v1.json
evaluations/results/: decision_delta_contract_v1.json  decision_delta_contract_v1.md  g1_living_product_graph_v1.json  i2_attributable_deliberation_v1.json  i2_attributable_deliberation_v1.md  i3_intelligence_use_v1.json  i3_intelligence_use_v1.md  i3_live_provider_v1.json  l1_foresight_impact_v1.json  l1_preregistration_readiness_v1.json  m2_signature_evaluation.json  m2_signature_evaluation.md  m5_ic_01_live_inputs_v1.json  m5_ic_01_live_receipts_v1.json  m5_ic_01_live_receipts_v1.md  offline_contract.json  offline_contract.md  r4_product_builder_failures_v1.json  r4_product_builder_golden_path_live_v1.json  r4_product_builder_golden_path_state_v1.json  r4_product_builder_provider_check_v1.json  r4_product_builder_provider_portability_v1.json
extensions/: README.md  __init__.py
extensions/reference/: __init__.py  extension.py  invocation.py  recipe.py  sentinels.py
infra/: docker-compose.yml
scripts/: __init__.py  demo_relational_assertions.py  evaluate_l1_foresight_impact.py  health_check.py  migrate_relational_assertions.py  release_inventory.py  run_i3_live_provider.py  scaffold_extension.py  schema_apply.py  secret_scan.py  verify_f0_persistence.py  verify_g1_living_product_graph.py  verify_golden_path.py  verify_i2_deliberation.py  verify_l1_preregistration.py  verify_m3_rehearsal.py  verify_product_builder_golden_path.py  verify_signature_scenario.py
tests/: conftest.py  i1_restart_app.py  test_ab_judge.py  test_acceptance.py  test_access_conformance.py  test_ace_build_session_tool.py  test_ace_capture_product.py  test_ace_create_spec_team.py  test_ace_forget_tool.py  test_ace_health_tool.py  test_ace_load_related.py  test_ace_parked_runs_tool.py  test_ace_roadmap_tool.py  test_ace_search_surfaces_capture.py  test_action_outcome.py  test_activate_idea.py  test_activate_idea_gated.py  test_active_composition.py  test_active_discipline.py  test_adaptive_reasoning.py  test_adjacency.py  test_adversarial_multi_round.py  test_adversarial_synthesis.py  test_affinities.py  test_agent_feedback.py  test_agent_orchestrator.py  test_agent_sdk_watcher.py  test_ai_briefing.py  test_api.py  test_api_agents.py  test_api_auth_switch.py  test_api_briefings.py  test_api_capture.py  test_api_capture_auth.py  test_api_codebase_qa.py  test_api_conflicts.py  test_api_context.py  test_api_decisions.py  test_api_documents.py  test_api_ecosystem.py  (+707 more)
tests/api/: test_briefing_endpoints.py  test_conductor_live.py  test_contributions_api.py  test_journey_api.py  test_loop_api.py  test_onboarding_conversation_api.py  test_portal_security.py  test_voice_audit_api.py  test_voice_thread_actions.py  test_voice_thread_audit.py  test_voice_threads_api.py
tests/canvas/: conftest.py  test_calibration_perspective_sort.py  test_canvas_api.py  (+29 more)
(+1189 files in other folders)
